--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2" style="text-align:center;">
-                    <h3 style="padding-left:36px;padding-right:36px;">We've all been there: you've been punched in public, and now you're lying face-first on the concrete sidewalk, wondering how it went down. It all happened so fast. Did you just get punched? Normally, you'd have no way of knowing. But it's 2015, and technology finds a way.</h3>
+                    <h3 style="padding-left:36px;padding-right:36px;">We've all been there: you've been punched in public, and now you're lying face-first on the concrete sidewalk, wondering how it all went down. It happened so fast. Did you just get punched? Normally, you'd have no way of knowing. But it's 2015, and technology is incredible.</h3>
                 </div>
                 
                 <div class="col-lg-8 col-lg-offset-2" style="margin-top:70px;margin-bottom:-0px;text-align:center;">
