--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="intro-text">
                         <span class="name">Punchd</span>
                         <hr>
-                        <span class="skills"><h1 style="margin-top:74px;margin-bottom:-30px;">WHY GET HIT WHEN YOU CAN GET PUNCHD?</h1></span>
+                        <span class="skills"><h1 style="margin-top:74px;margin-bottom:-30px;">DON'T GET HIT.<BR>GET PUNCHD.</h1></span>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>IS THIS REAL</h3>
-                        <p>YEP, IT IS.<br>TOTALLY IS.</p>
+                        <h4>YEP, IT IS.<br>TOTALLY IS.</h4>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>THROWN TOGETHER IN ONE NIGHT</h3>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>MADE BY</h3>
-                        <p>BENJAMIN ZWEIG<br>ROHITH VARANASI</p>
+                        <h4>BENJAMIN ZWEIG<br>ROHITH VARANASI</h4>
                     </div>
                 </div>
             </div>
