--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>IS THIS REAL</h3>
-                        <h4>YEP, IT IS.<br>TOTALLY IS.</h4>
+                        <h4>YEP, IT'S REAL.<br>TOTALLY REAL.</h4>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>THROWN TOGETHER IN ONE NIGHT</h3>
