--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                     <h1 style="text-align:center;margin-top:30px;">quick, grab it before someone punches you in the face.</h1>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline" style="margin-top:40px;">
-                        <i class="fa fa-download"></i> Download Punchd
+                    <h3 style="">coming soon. like, actually.</h3>
+                    <a href="" class="btn btn-lg btn-outline" style="margin-top:40px;">
+                        <i class="fa fa-arrow-circle-down"></i>  DOWNLOAD PUNCHD
                     </a>
                 </div>
             </div>
@@ -159,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>IS THIS REAL</h3>
+                        <h3>IS THIS REAL?</h3>
                         <h4>YEP, IT'S REAL.<br>TOTALLY REAL.</h4>
                     </div>
                     <div class="footer-col col-md-4">
