--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <h3 style="text-align:center;">Look, we're pretty busy. But if you really need to contact us, I guess you could do that at <a href="mailto:ben@tfzweig.com">ben@tfzweig.com</a>.</h3>
+                    <h3 style="padding-left:36px;padding-right:36px;text-align:center;">Look, we're pretty busy. But if you really need to contact us, I guess you could do that at <a href="mailto:ben@tfzweig.com">ben@tfzweig.com</a>.</h3>
                 </div>
             </div>
         </div>
