--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     <h3 style="padding-left:36px;padding-right:36px;">We've all been there: you've been punched in public, and now you're lying face-first on the concrete sidewalk, wondering how it all went down. It happened so fast. Did you just get punched? Normally, you'd have no way of knowing. But it's 2015, and technology is incredible.</h3>
                 </div>
                 
-                <div class="col-lg-8 col-lg-offset-2" style="margin-top:70px;margin-bottom:-0px;text-align:center;">
-                    <h3 style="padding-left:36px;padding-right:36px;">Introducing Punchd, the first app to market that lets you know you've been punched in the face, after you've been punched in the face. No more questions. No more uncertainty. Punchd takes the guesswork of figuring out when someone's swung their fist directly into your face. </h3>
+                <div class="col-lg-8 col-lg-offset-2" style="margin-top:40px;margin-bottom:-0px;text-align:center;">
+                    <h3 style="padding-left:36px;padding-right:36px;">Introducing Punchd, the first app to market that lets you know you've been punched in the face, after you've been punched in the face. No more questions. No more uncertainty. With a sleek UI and sophisticated machine learning algorithms, punchd takes the guesswork of figuring out when someone's swung their fist directly into your face. </h3>
                 </div>
                 
             </div>
