--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3 style="">coming soon. like, actually.</h3>
-                    <a href="https://play.google.com/store/apps/details?id=com.rohithvaranasi.punchd" class="btn btn-lg btn-outline" style="margin-top:40px;">
+                    <a href="https://play.google.com/store/apps/details?id=com.rohithvaranasi.punchd" target="_tab" class="btn btn-lg btn-outline" style="margin-top:40px;">
                         <i class="fa fa-arrow-circle-down"></i>  DOWNLOAD PUNCHD
                     </a>
                 </div>
