--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
         <div class="container" style="backgr">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                     <img class="img-responsive" src="img/illustration.png" style="margin-left: auto;
+    margin-right: auto;padding-bottom:60px;margin-top:-10px" alt="">
+                </div>
+                <div class="col-lg-12 text-center">
                     <h2>Download</h2>
                     <hr>
                 </div>
