--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h1 style="text-align:center;margin-top:30px;">quick, grab it before someone punches you in the face.</h1>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    
+                    <h3 style="margin-bottom:-10px">IOS VERSION COMING SOON.</h3>
                     <a href="https://play.google.com/store/apps/details?id=com.rohithvaranasi.punchd" target="_tab" class="btn btn-lg btn-outline" style="margin-top:40px;">
                         <i class="fa fa-arrow-circle-down"></i>  DOWNLOAD PUNCHD
                     </a>
